<resources>
    <string name="app_name">RelativeLayoutT</string>
    <string name="distance">Distancia</string>
    <string name="total_km">Total de KM</string>
    <string name="price">Preço</string>
    <string name="price_per_l">Preco por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_l">KMs por litro</string>
    <string name="total_spend">GASTO TOTAL:</string>
    <string name="r_0">R$ 0</string>
    <string name="calc">CALCULAR</string>
    <string name="clear">Limpar</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
</resources>