<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    >

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/distance" />

    <TextView
        android:layout_below="@id/edit_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/total_km"
        android:id="@+id/text_1"
        />

    <EditText
        android:layout_below="@id/text_1"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        />

    <TextView
        android:layout_below="@id/edit_price"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/price_per_l"
        />

    <EditText
        android:layout_below="@id/textView"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/autonomy"
        />

    <TextView
        android:layout_below="@id/edit_autonomy"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/kms_per_l"
        />

    <TextView
        android:layout_below="@id/textView2"
        android:id="@+id/textView5"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/total_spend"
        android:textSize="16sp"
        />

    <TextView
        android:layout_below="@id/textView5"
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/r_0"
        android:textColor="#3F51B5"
        android:textSize="38sp" />

    <Button
        android:layout_below="@id/text_total_value"
        android:id="@+id/button_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/teal_200"
        android:padding="16dp"
        android:text="@string/calc"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:layout_below="@id/button_calc"
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/purple_200"
        android:padding="16dp"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</RelativeLayout>